--- a/workflows/hello-wordl.yml
+++ b/workflows/hello-wordl.yml
@@ -24,5 +24,5 @@ jobs: #Definición de los jobs
       - uses: actions/setup-python@v3
         with:
           python-version: "3.10"
-      - name: script-runing
-        run: node helloworld.py
+      - name: helloworld
+        run: python3 helloworld.py
