--- a/.github/workflows/hello-wordl.yml
+++ b/.github/workflows/hello-wordl.yml
@@ -1,1 +1,25 @@
 
+name: hola-mundo #Nombre del workflow
+on: [push] #evento que lo activará
+jobs: #Definición de los jobs
+  hola-mundo: #Nombre del job
+    runs-on: ubuntu-latest #Maquina en la que correrá
+    steps: #Lista de steps del job hola-mundo
+      - uses: actions/checkout@v3
+      - name: Hola mundo #Segundo step de nombre Hola mundo
+      - uses: actions/setup-node@v3
+        with:
+          node-version: 18
+      - name: helloworld
+        run: node helloworld.js
+jobs: #Definición de los jobs
+  hola-mundo2: #Nombre del job
+    runs-on: ubuntu-latest #Maquina en la que correrá
+    steps: #Lista de steps del job hola-mundo
+        uses: actions/checkout@v3 #Usará el action haythem/public-ip
+      - name: Set up Python 3.10 #Segundo step de nombre Hola mundo
+      - uses: actions/setup-python@v3
+        with:
+          python-version: "3.10"
+      - name: helloworld
+        run: python3 helloworld.py
