--- a/.github/workflows/hello-world.yml
+++ b/.github/workflows/hello-world.yml
@@ -1,4 +1,5 @@
 name: hola-mundo # Nombre del workflow
+run-name: test hola mundo
 on: [push] # Evento que lo activará
 jobs: # Definición de los jobs
   hola-mundo: # Nombre del job
